Adjust plot appearance for unified looks

--- a/interactive-service.ipynb
+++ b/interactive-service.ipynb
@@ -18,7 +18,7 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib widget\n",
+    "#%matplotlib widget\n",
     "import ipywidgets as widgets\n",
     "import ipyvuetify as v\n",
     "from ipywidgets import interact_manual\n",
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
-    "import ipympl\n",
+    "#import ipympl\n",
     "\n",
     "import plots\n"
    ]
@@ -172,15 +172,15 @@
     "\n",
     "        with output_cases_since:\n",
     "            output_cases_since.clear_output()\n",
-    "            plots.semilog_cases_since(get_countries())\n",
+    "            display(plots.semilog_cases_since(get_countries()).get_figure())\n",
     "            \n",
     "        with output_total_confirmed:\n",
     "            output_total_confirmed.clear_output()\n",
-    "            plots.generate_absolute_plot(confirmed, get_countries(), title=\"Confirmed cases\")\n",
+    "            display(plots.generate_absolute_plot(confirmed, get_countries(), title=\"Confirmed cases\").get_figure())\n",
     "\n",
     "        with output_total_deaths:\n",
     "            output_total_deaths.clear_output()\n",
-    "            plots.generate_absolute_plot(deaths, get_countries(), title=\"Deaths\")\n",
+    "            display(plots.generate_absolute_plot(deaths, get_countries(), title=\"Deaths\").get_figure())\n",
     "        \n",
     "    except Exception as e:\n",
     "        with output_error:\n",
