--- a/interactive-service.ipynb
+++ b/interactive-service.ipynb
@@ -48,7 +48,8 @@
     "from matplotlib import pyplot as plt\n",
     "#import ipympl\n",
     "\n",
-    "import plots\n"
+    "import plots\n",
+    "plots.use_JHU_github_live_data()"
    ]
   },
   {
