improve docstring for new data format

--- a/non-interactive-plots.ipynb
+++ b/non-interactive-plots.ipynb
@@ -115,7 +115,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_data_list = [((us_cases, [\"Wisconsin\"], None),(wi_cases,[\"Dane\",\"Milwaukee\",\"Waukesha\"],None)),\n",
+    "                 ((us_deaths, [\"Wisconsin\"], None),(wi_deaths,[\"Milwaukee\"],None))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -142,8 +152,6 @@
     }
    ],
    "source": [
-    "all_data_list = [((us_cases, [\"Wisconsin\"], None),(wi_cases,[\"Dane\",\"Milwaukee\",\"Waukesha\"],None)),\n",
-    "                 ((us_deaths, [\"Wisconsin\"], None),(wi_deaths,[\"Milwaukee\"],None))]\n",
     "for data_list in all_data_list:\n",
     "    plots.semilog_since(data_list,\n",
     "                        data_type=\"cases\",\n",
